# app.js
@@ -1,5 +1,4 @@
 require("dotenv").config();
-require("./configs/database").connect();
 const morgan = require("morgan");
 
 const cors = require('cors');
@@ -17,8 +16,5 @@ app.use(morgan("dev"));
 
 app.use('/api-docs', require('./docs/swagger'));
 app.use('/', require('./controllers/user.controller'));
-app.use('/jwks', require('./controllers/jwks.controller'));
-
-app.use(require('./middleware/error-handler'));
 
 module.exports = app;
