# model/user.model.js
@@ -1,8 +1,0 @@
-const mongoose = require("mongoose");
-
-const userSchema = new mongoose.Schema({
-    username: { type: String, unique: true },
-    password: { type: String }
-});
-
-module.exports = mongoose.model("user", userSchema);
