# services/user.service.js
@@ -1,20 +1,52 @@
 const https = require('https');
-const User = require('../model/user.model');
-const refreshTokenService = require('../services/refresh-token.service');
-const fs = require("fs");
-const jwt = require('jsonwebtoken');
-const authConfig = require('../configs/auth.config');
 
-var authApiUser = async function(username, password) {
-    const base64String = Buffer.from(username + ':' + password).toString('base64');
-
+var authApiUser = async function(base64String) {
     const options = {
-        hostname: 'api.cujae.edu.cu',
+        hostname: 'apidev.cujae.edu.cu',
+        port: 443,
+        path: `/user/login`,
+        method: 'GET',
+        headers: {
+            'Authorization': `${base64String}`
+        }
+    };
+
+    return new Promise((resolve, reject) => {
+        const req = https.request(options, (res) => {
+            res.setEncoding('utf8');
+            let responseBody = '';
+
+            res.on('data', (chunk) => {
+                responseBody += chunk;
+            });
+
+            res.on('end', () => {
+                if (res.statusCode === 401) {
+                    responseBody = '{"error": "401", "msg": "Token Invalid" }';
+                    resolve(JSON.parse(responseBody));
+                } else {
+                    resolve(JSON.parse(responseBody));
+                }
+
+            });
+        });
+
+        req.on('error', (err) => {
+            reject(err);
+        });
+
+        req.end();
+    });
+};
+
+async function getUser(token, username) {
+    const options = {
+        hostname: 'apidev.cujae.edu.cu',
         port: 443,
         path: `/user/${username}`,
         method: 'GET',
         headers: {
-            'Authorization': `Basic ${base64String}`
+            'Authorization': `Bearer ${token}`
         }
     };
 
@@ -30,7 +62,7 @@ var authApiUser = async function(username, password) {
 
             res.on('end', () => {
                 if (res.statusCode === 401) {
-                    responseBody = '{"errorCode": "401", "msg": "Could not verify your access level for that URL" }';
+                    responseBody = '{"error": "401", "msg": "Token invalid" }';
                     resolve(JSON.parse(responseBody));
                 } else {
                     resolve(JSON.parse(responseBody));
@@ -43,75 +75,65 @@ var authApiUser = async function(username, password) {
             reject(err);
         });
 
-        req.write(base64String);
         req.end();
     });
-};
+}
 
-var createUser = async function(username, password) {
-    const userbd = await User.findOne({ username });
+async function refreshToken(token, refreshToken) {
+    console.log(token);
+    const data = new TextEncoder().encode(
+        JSON.stringify({
+            refresh_token: refreshToken
+        })
+    );
 
-    if (!userbd) {
-        return User.create({
-            username,
-            password,
+    const options = {
+        hostname: 'apidev.cujae.edu.cu',
+        port: 443,
+        path: `/user/refresh-token`,
+        method: 'POST',
+        headers: {
+            'Authorization': `Bearer ${token}`,
+            'Content-Type': 'application/json',
+            'Content-Length': data.length
+        }
+    };
+
+    return new Promise((resolve, reject) => {
+        const req = https.request(options, (res) => {
+            console.log(`status Code: ${res.statusCode}`);
+            res.setEncoding('utf8');
+            let responseBody = '';
+
+            res.on('data', (chunk) => {
+                responseBody += chunk;
+            });
+
+            res.on('end', () => {
+                if (res.statusCode === 401) {
+                    responseBody = '{"error": "401", "msg": "Access Token invalid" }';
+                    resolve(JSON.parse(responseBody));
+                } else if (res.statusCode === 400) {
+                    responseBody = '{"error": "400", "msg": "Token is still valid, cant be refreshed" }';
+                    resolve(JSON.parse(responseBody));
+                } else {
+                    resolve(JSON.parse(responseBody));
+                }
+
+            });
         });
-    }
-    return userbd;
-};
 
-function generateJwtToken(user, audience) {
-    const payload = {
-        username: user.username,
-    };
+        req.on('error', (err) => {
+            reject(err);
+        });
 
-    var privateKEY = fs.readFileSync('private.key', 'utf8');
-
-    var i = authConfig.issuer; // Issuer 
-    var s = user.username; // Subject 
-    var a = audience; // Audience
-    // SIGNING OPTIONS
-    var signOptions = {
-        issuer: i,
-        subject: s,
-        audience: a,
-        expiresIn: authConfig.jwtExpiration,
-        algorithm: "RS256"
-    };
-
-    return jwt.sign(payload, privateKEY, signOptions);
-}
-
-async function generateRefreshJwtToken(user, audience, ip) {
-    const payload = {
-        username: user.username
-    };
-
-    var a = audience; // Audience
-
-    var refreshToken = jwt.sign(payload, process.env.TOKEN_KEY, {
-        expiresIn: authConfig.jwtRefreshExpiration,
-        audience: a,
+        req.write(data);
+        req.end();
     });
-
-    await refreshTokenService.createRefreshToken(user, refreshToken, ip);
-    return refreshToken;
-}
-
-async function getUser(username) {
-    const userbd = await User.findOne({ username });
-    return await authApiUser(userbd.username, userbd.password);
-}
-
-async function findUserByUsername(username) {
-    return await User.findOne({ username });
 }
 
 module.exports = {
     authApiUser: authApiUser,
-    createUser: createUser,
-    generateJwtToken: generateJwtToken,
-    generateRefreshJwtToken: generateRefreshJwtToken,
     getUser: getUser,
-    findUserByUsername: findUserByUsername,
+    refreshToken: refreshToken,
 };
